# sensor-operating-system

./: .gitignore  CMakeLists.txt  ExampleParser.cpp  ExamplePySensor.py  LICENSE  README.md  binarySerialParserExample.cpp  binarySerialParserExample.hpp  cliParser.hpp  configuration.cpp  configuration.hpp  cppNode.hpp  data.cpp  data.hpp  externalSensor.cpp  externalSensor.hpp  logger.cpp  logger.hpp  main.cpp  manager.cpp  manager.hpp  memoryChecker.hpp  parser.cpp  parser.hpp  parserInterface.cpp  parserInterface.hpp  parserPluginHandler.cpp  parserPluginHandler.hpp  pluginHandler.hpp  pySensor.py  sensor.cpp  sensor.hpp  serialParsedSensor.cpp  serialParsedSensor.hpp  serialSensor.cpp  serialSensor.hpp  serializer.cpp  serializer.hpp  sos_config copy.json  sos_config.json  (+6 more)
docs/: prezentacja_seminarium.md
